--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -5,7 +5,7 @@
     <title>Очень простая страница</title> 
       <div class="header"><h1>Об авторе<hr><br></h1></div>
       <h2>Я есть автор этой замечательной страницы!<hr><br></h2>
-      <p>Меня зовут Николай.<br></p>
+      <p>Добрый день! Меня зовут Николай.<br></p>
       <p>Здесь я должен рассказать о себе, что меня интересует и всё такое.</p>
       <p>Но я очень стеснительный т.ч. ничего я Вам не скажу!<hr><br></p>
       <div class="footer">© Nik_Nik, все права защищены мной!<hr><br></div>
