--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -14,17 +14,17 @@
         <ul class="list-group list-group-flush">
           <br>
           <li class="list-group-item">
-          <i>Python</i>
+          <i>Python.</i>
           </li>
           <li class="list-group-item">
-          <i>Django</i>
+          <i>Django.</i>
           </li>
           <li class="list-group-item">
-          <i>SQLite</i>
+          <i>SQLite.</i>
           </li><br>
           <p>Ну и конечно железо:</p>
           <li class="list-group-item">
-          <i>MSI GL72M 7REX</i>
+          <i>MSI GL72M 7REX.</i>
           </li>
         </ul>
       </aside>
